--- a/index.html
+++ b/index.html
@@ -38,6 +38,29 @@
     <p><a href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">进入问卷</a></p>
   </div>
 
+  <hr>
+  <h2>📘 项目简介 / Descrizione del progetto / Project Overview</h2>
+  <p><strong>中文：</strong><br>
+  《费兰特在中国：姐妹情谊的书写、传递与重塑》是一项关于意大利作家埃莱娜·费兰特（Elena Ferrante）小说在中国的译介、接受与影响的学术研究。本系列采访是该研究的重要组成部分，聚焦中国读者的阅读经验与情感反应，探索“姐妹情谊”这一核心主题如何在跨文化语境中被理解、传达与改写。</p> 
+
+  <p><strong>Italiano：</strong><br>
+  "Ferrante in Cina: scrittura, trasmissione e rielaborazione della sorellanza" è una ricerca accademica sull'introduzione, la ricezione e l'impatto dei romanzi ferrantiani in Cina. Il progetto si concentra sull'esperienza di lettura delle lettrici e dei lettori  cinesi e su come il tema della sorellanza venga recepito e trasformato in un contesto interculturale.</p> 
+
+  <p><strong>English:</strong><br>
+  “Ferrante in China: Writing, Transmission, and Reinterpretation of Sisterhood” is an academic study on the translation, reception, and cultural reinterpretation of Ferrante’s novels in China. The project focuses on Chinese readers’ experiences and how the theme of sisterhood is understood and reimagined across cultures.</p> 
+
+  <hr>
+  <h2>👩‍🎓 项目负责人 / Ricercatrice / Researcher</h2>
+  <p><strong>中文：</strong><br>
+  张燕燕，摩德纳与雷焦艾米利亚大学语言与文化系博士生。研究方向为意大利当代文学、女性主义批评、翻译研究、海洋文学。合译有《一个不属于我的名字》《成年人的谎言生活》《寻找伊莎贝尔》《最后的灯塔》等</p> 
+
+  <p><strong>Italiano：</strong><br>
+  Zhang Yanyan, dottoranda in Scienze Umanistiche presso il Dipartimento di Studi Linguistici e Culturali dell’Università di Modena e Reggio Emilia.
+I suoi interessi di ricerca comprendono letteratura italiana contemporanea, critica letteraria, studi della traduzione letteraria e la letteratura di mare. Opere tradotte: "Un nome che non è il mio", "La vita bugiarda degli adulti", "Per Isabel. Un mandala", "L'ultimo faro".</p> 
+
+  <p><strong>English:</strong><br>
+  Zhang Yanyan, PhD candidate in Humanities at the Department of Linguistic and Cultural Studies, University of Modena and Reggio Emilia. Her research interests include contemporary Italian literature, literary criticism, literary translation, and ocean literature. Translated works: "Un nome che non è il mio", "La vita bugiarda degli adulti", "Per Isabel. Un mandala", "L'ultimo faro".</p>
+
   <script>
     function changeLanguage() {
       const lang = document.getElementById('lang').value;
@@ -63,4 +86,3 @@
   </script>
 </body>
 </html>
-
