--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <hr>
   <h2>👩‍🎓 项目负责人 / Ricercatrice / Researcher</h2>
   <p><strong>中文：</strong><br>
-  张燕燕，摩德纳与雷焦艾米利亚大学语言与文化系博士生。研究方向为意大利当代文学、女性主义批评、翻译研究、海洋文学。合译有《一个不属于我的名字》《成年人的谎言生活》《寻找伊莎贝尔》《最后的灯塔》等</p> 
+  张燕燕，摩德纳与雷焦艾米利亚大学语言与文化系博士生。研究兴趣有意大利当代文学、女性主义批评、翻译研究、海洋文学。合译有《一个不属于我的名字》《成年人的谎言生活》《寻找伊莎贝尔》《最后的灯塔》等。</p> 
 
   <p><strong>Italiano：</strong><br>
   Zhang Yanyan, dottoranda in Scienze Umanistiche presso il Dipartimento di Studi Linguistici e Culturali dell’Università di Modena e Reggio Emilia.
