--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>费兰特在中国：读者采访 · Elena Ferrante in Cina: interviste ai lettori</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
     body {
       font-family: "宋体", TimesNewRoman, serif;
@@ -33,11 +33,6 @@
     }
     .lang-select {
       margin-bottom: 2em;
-    }
-    iframe {
-      border: none;
-      width: 100%;
-      height: 700px;
     }
     h2 {
       font-size: 1.2em;
@@ -102,9 +97,19 @@
     <div id="section-researcher"></div>
   </div>
 
-  <footer>
-    联系邮箱：yanyan.zhang@unimore.it<br>
-    问卷填写截止时间为 2025 年 8 月 25 日 23:45（意大利时间）
+  <footer id="footer">
+    <div id="footer-zh">
+      联系邮箱：<a href="mailto:yanyan.zhang@unimore.it">yanyan.zhang@unimore.it</a><br>
+      问卷填写截止时间为 2025 年 8 月 25 日 23:45（罗马时间）
+    </div>
+    <div id="footer-it" style="display:none">
+      Email di contatto: <a href="mailto:yanyan.zhang@unimore.it">yanyan.zhang@unimore.it</a><br>
+      Scadenza del questionario: 25 agosto 2025, ore 23:45 (ora di Roma)
+    </div>
+    <div id="footer-en" style="display:none">
+      Contact email: <a href="mailto:yanyan.zhang@unimore.it">yanyan.zhang@unimore.it</a><br>
+      Deadline for submission: August 25, 2025, 11:45 PM (Rome time)
+    </div>
   </footer>
 
   <script>
@@ -139,6 +144,10 @@
       document.getElementById('section-project').innerHTML = `<p>${contentMap[lang].project}</p>`;
       document.getElementById('section-title-researcher').innerText = contentMap[lang].researcherTitle;
       document.getElementById('section-researcher').innerHTML = `<p>${contentMap[lang].researcher}</p>`;
+
+      document.getElementById('footer-zh').style.display = lang === 'zh' ? 'block' : 'none';
+      document.getElementById('footer-it').style.display = lang === 'it' ? 'block' : 'none';
+      document.getElementById('footer-en').style.display = lang === 'en' ? 'block' : 'none';
     }
 
     window.onload = changeLanguage;
