--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       color: #333;
     }
     header {
-      background-image: linear-gradient(rgba(0,0,0,0.10), rgba(0,0,0,0.10)), url("vesuvio.jpg");
+      background-image: linear-gradient(rgba(0,0,0,0.05), rgba(0,0,0,0.05)), url("vesuvio.jpg");
       background-size: cover;
       background-position: center;
       color: white;
@@ -25,6 +25,7 @@
       font-size: 1.8em;
       margin: 0;
       line-height: 1.4em;
+      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
     }
     .container {
       max-width: 960px;
