--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <footer id="footer">
     <div id="footer-zh">
       联系邮箱：<a href="mailto:yanyan.zhang@unimore.it">yanyan.zhang@unimore.it</a><br>
-      问卷填写截止时间为 2025 年 8 月 25 日 23:45（罗马时间）
+      问卷填写截止时间：2025 年 8 月 25 日 23:45（罗马时间）
     </div>
     <div id="footer-it" style="display:none">
       Email di contatto: <a href="mailto:yanyan.zhang@unimore.it">yanyan.zhang@unimore.it</a><br>
