--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       background-image: linear-gradient(rgba(0,0,0,0.05), rgba(0,0,0,0.05)), url("vesuvio.jpg");
       background-size: cover;
       background-position: center;
-      color: white;
+      color: #2F3E46; /* 莫兰迪蓝灰色 */
       padding: 4em 2em;
       text-align: center;
     }
@@ -25,7 +25,7 @@
       font-size: 1.8em;
       margin: 0;
       line-height: 1.4em;
-      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+      text-shadow: 1px 1px 4px rgba(255, 255, 255, 0.5);
     }
     .container {
       max-width: 960px;
@@ -89,19 +89,19 @@
       </select>
     </div>
 
-    <div id="form-content" style="text-align: center;"></div>
-
     <h2><i class="fas fa-book-open"></i> <span id="section-title-project"></span></h2>
     <div id="section-project"></div>
 
     <h2><i class="fas fa-user-graduate"></i> <span id="section-title-researcher"></span></h2>
     <div id="section-researcher"></div>
+
+    <div id="form-content" style="text-align: center;"></div>
   </div>
 
   <footer id="footer">
     <div id="footer-zh">
       联系邮箱：<a href="mailto:yanyan.zhang@unimore.it">yanyan.zhang@unimore.it</a><br>
-      问卷截止时间：2025 年 8 月 25 日 23:45（罗马时间）
+      问卷填写截止时间：2025 年 8 月 25 日 23:45（罗马时间）
     </div>
     <div id="footer-it" style="display:none">
       Email di contatto: <a href="mailto:yanyan.zhang@unimore.it">yanyan.zhang@unimore.it</a><br>
