--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       color: #333;
     }
     header {
-      background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url("vesuvio.jpg");
+      background-image: linear-gradient(rgba(0,0,0,0.25), rgba(0,0,0,0.15)), url("vesuvio.jpg");
       background-size: cover;
-      background-position: center 65%; /* 改动：下移图片，显示大海和火山 */
+      background-position: center 65%;
       padding: 4em 2em;
       text-align: center;
     }
@@ -26,7 +26,7 @@
       line-height: 1.4em;
       color: #1F4E79;
       font-weight: bold;
-      text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.5);
+      text-shadow: 2px 2px 6px rgba(255, 255, 255, 0.7);
     }
     .container {
       max-width: 960px;
