--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       background-color: #f8f8f8;
       color: #333;
     }
+
     header {
       background-image: linear-gradient(rgba(0,0,0,0.25), rgba(0,0,0,0.15)), url("vesuvio.jpg");
       background-size: cover;
@@ -20,27 +21,32 @@
       padding: 4em 2em;
       text-align: center;
     }
+
     header h1 {
       font-size: 2em;
       margin: 0;
       line-height: 1.4em;
-      color: #1F4E79;
+      color: #005B8C; /* 更亮的蓝色系，突出显示 */
       font-weight: bold;
       text-shadow: 2px 2px 6px rgba(255, 255, 255, 0.7);
     }
+
     .container {
       max-width: 960px;
       margin: 2em auto;
       padding: 0 1em;
     }
+
     .lang-select {
       margin-bottom: 2em;
     }
+
     h2 {
       font-size: 1.2em;
       margin-top: 2em;
       color: #1F4E79;
     }
+
     .form-button {
       display: inline-block;
       background-color: #5B8CBF;
@@ -53,10 +59,23 @@
       margin: 2em 0 3em;
       transition: background-color 0.3s, transform 0.3s;
     }
+
     .form-button:hover {
       background-color: #416b99;
       transform: translateY(-3px);
     }
+
+    #form-content {
+      text-align: center;
+      margin-top: 4em; /* 新增下移整体距离 */
+    }
+
+    .form-text {
+      color: #1F4E79; /* 深蓝色，与标题一致 */
+      font-size: 1.1em; /* 放大一点 */
+      margin-bottom: 1em;
+    }
+
     footer {
       margin-top: 4em;
       padding: 2em 1em;
@@ -65,10 +84,16 @@
       color: #444;
       background-color: #e2e7ec;
     }
+
     @media (max-width: 600px) {
+      header {
+        background-position: 70% 65%; /* 手机端右偏一些，露出更多右侧大海 */
+      }
+
       header h1 {
         font-size: 1.5em;
       }
+
       .form-button {
         font-size: 1em;
         padding: 0.8em 1.5em;
@@ -80,6 +105,7 @@
   <header>
     <h1>费兰特在中国：读者采访<br>Elena Ferrante in Cina: interviste ai lettori</h1>
   </header>
+
   <div class="container">
     <div class="lang-select">
       <label for="lang">选择语言 / Seleziona lingua / Choose language: </label>
@@ -96,7 +122,7 @@
     <h2><i class="fas fa-user-graduate"></i> <span id="section-title-researcher"></span></h2>
     <div id="section-researcher"></div>
 
-    <div id="form-content" style="text-align: center;"></div>
+    <div id="form-content"></div>
   </div>
 
   <footer id="footer">
@@ -117,21 +143,21 @@
   <script>
     const contentMap = {
       zh: {
-        form: `感谢您参与本研究！请点击下方按钮填写问卷：<br><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">进入问卷</a>`,
+        form: `<p class="form-text">感谢您参与本研究！请点击下方按钮填写问卷：</p><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">进入问卷</a>`,
         projectTitle: "项目简介",
         researcherTitle: "项目负责人",
         project: `《费兰特在中国：姐妹情谊的书写、传递与重塑》是一项关于意大利作家埃莱娜·费兰特（Elena Ferrante）小说在中国的译介、接受与影响的学术研究。本采访是该研究的重要组成部分，聚焦中国读者的阅读经验与情感反应，探索“姐妹情谊”这一主题如何在跨文化语境中被理解、传递与重塑。`,
         researcher: `张燕燕，摩德纳与雷焦艾米利亚大学语言与文化系博士生。研究兴趣有意大利当代文学、文学批评、翻译研究、海洋文学。合译有《一个不属于我的名字》《成年人的谎言生活》《寻找伊莎贝尔》《最后的灯塔》等。`
       },
       it: {
-        form: `Grazie per aver partecipato alla nostra ricerca! Clicca il bottone qui sotto per compilare il questionario:<br><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">Vai al questionario</a>`,
+        form: `<p class="form-text">Grazie per aver partecipato alla nostra ricerca! Clicca il bottone qui sotto per compilare il questionario:</p><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">Vai al questionario</a>`,
         projectTitle: "Descrizione del progetto",
         researcherTitle: "Ricercatrice",
         project: `<em>Ferrante in Cina: scrittura, trasmissione e rielaborazione della sorellanza</em> è una ricerca accademica sull'introduzione, la ricezione e l'impatto dei romanzi ferrantiani in Cina. Il progetto si concentra sull'esperienza di lettura delle lettrici e dei lettori cinesi e su come il tema della sorellanza venga recepito e trasformato in un contesto interculturale.`,
         researcher: `Zhang Yanyan, dottoranda in Scienze Umanistiche presso il Dipartimento di Studi Linguistici e Culturali dell’Università di Modena e Reggio Emilia. I suoi interessi di ricerca comprendono letteratura italiana contemporanea, critica letteraria, studi della traduzione letteraria e la letteratura di mare. Opere tradotte: <em>Un nome che non è il mio</em>, <em>La vita bugiarda degli adulti</em>, <em>Per Isabel. Un mandala</em>, <em>L'ultimo faro</em>.`
       },
       en: {
-        form: `Thank you for participating in our research! Please click the button below to fill out the questionnaire:<br><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">Go to the questionnaire</a>`,
+        form: `<p class="form-text">Thank you for participating in our research! Please click the button below to fill out the questionnaire:</p><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">Go to the questionnaire</a>`,
         projectTitle: "Project Overview",
         researcherTitle: "Researcher",
         project: `<em>Ferrante in China: Writing, Transmission, and Reinterpretation of Sisterhood</em> is an academic study on the translation, reception, and cultural reinterpretation of Ferrante’s novels in China. The project focuses on Chinese readers’ experiences and how the theme of sisterhood is understood and reimagined across cultures.`,
