--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       font-size: 2em;
       margin: 0;
       line-height: 1.4em;
-      color: #005B8C; /* 更亮的蓝色系，突出显示 */
+      color: #f9f9f9;
       font-weight: bold;
-      text-shadow: 2px 2px 6px rgba(255, 255, 255, 0.7);
+      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
     }
 
     .container {
@@ -67,12 +67,13 @@
 
     #form-content {
       text-align: center;
-      margin-top: 4em; /* 新增下移整体距离 */
+      margin-top: 4em;
     }
 
     .form-text {
-      color: #1F4E79; /* 深蓝色，与标题一致 */
-      font-size: 1.1em; /* 放大一点 */
+      color: #1F4E79;
+      font-size: 1.1em;
+      font-weight: bold;
       margin-bottom: 1em;
     }
 
@@ -87,7 +88,7 @@
 
     @media (max-width: 600px) {
       header {
-        background-position: 70% 65%; /* 手机端右偏一些，露出更多右侧大海 */
+        background-position: 75% 50%;
       }
 
       header h1 {
