--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       background-color: #f8f8f8;
       color: #333;
     }
-
     header {
       background-image: linear-gradient(rgba(0,0,0,0.25), rgba(0,0,0,0.15)), url("vesuvio.jpg");
       background-size: cover;
@@ -21,32 +20,39 @@
       padding: 4em 2em;
       text-align: center;
     }
-
+    @media (max-width: 600px) {
+      header {
+        background-position: 70% 50%; /* 手机端：右移 + 上移背景图 */
+      }
+    }
     header h1 {
       font-size: 2em;
       margin: 0;
       line-height: 1.4em;
-      color: #f9f9f9;
+      color: #f5f5f5; /* 柔和白色标题 */
       font-weight: bold;
       text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
     }
-
     .container {
       max-width: 960px;
       margin: 2em auto;
       padding: 0 1em;
     }
-
     .lang-select {
       margin-bottom: 2em;
     }
-
     h2 {
       font-size: 1.2em;
       margin-top: 2em;
       color: #1F4E79;
     }
-
+    .form-text {
+      font-size: 1.1em;
+      font-weight: bold;
+      color: #1F4E79;
+      margin-top: 4em;
+      line-height: 1.8;
+    }
     .form-button {
       display: inline-block;
       background-color: #5B8CBF;
@@ -56,27 +62,13 @@
       border: none;
       border-radius: 30px;
       text-decoration: none;
-      margin: 2em 0 3em;
+      margin: 1.5em 0 3em;
       transition: background-color 0.3s, transform 0.3s;
     }
-
     .form-button:hover {
       background-color: #416b99;
       transform: translateY(-3px);
     }
-
-    #form-content {
-      text-align: center;
-      margin-top: 4em;
-    }
-
-    .form-text {
-      color: #1F4E79;
-      font-size: 1.1em;
-      font-weight: bold;
-      margin-bottom: 1em;
-    }
-
     footer {
       margin-top: 4em;
       padding: 2em 1em;
@@ -85,16 +77,10 @@
       color: #444;
       background-color: #e2e7ec;
     }
-
     @media (max-width: 600px) {
-      header {
-        background-position: 75% 50%;
-      }
-
       header h1 {
         font-size: 1.5em;
       }
-
       .form-button {
         font-size: 1em;
         padding: 0.8em 1.5em;
@@ -106,7 +92,6 @@
   <header>
     <h1>费兰特在中国：读者采访<br>Elena Ferrante in Cina: interviste ai lettori</h1>
   </header>
-
   <div class="container">
     <div class="lang-select">
       <label for="lang">选择语言 / Seleziona lingua / Choose language: </label>
@@ -123,42 +108,42 @@
     <h2><i class="fas fa-user-graduate"></i> <span id="section-title-researcher"></span></h2>
     <div id="section-researcher"></div>
 
-    <div id="form-content"></div>
+    <div id="form-content" style="text-align: center;"></div>
   </div>
 
   <footer id="footer">
     <div id="footer-zh">
       联系邮箱：<strong><a href="mailto:yanyan.zhang@unimore.it">yanyan.zhang@unimore.it</a></strong><br>
-      问卷填写截止时间：2025 年 8 月 25 日 23:45（罗马时间）
+      采访截止时间：2025 年 8 月 25 日 23:45（罗马时间）
     </div>
     <div id="footer-it" style="display:none">
       Email di contatto: <strong><a href="mailto:yanyan.zhang@unimore.it">yanyan.zhang@unimore.it</a></strong><br>
-      Scadenza del questionario: 25 agosto 2025, ore 23:45 (ora di Roma)
+      Scadenza dell’intervista: 25 agosto 2025, ore 23:45 (ora di Roma)
     </div>
     <div id="footer-en" style="display:none">
       Contact email: <strong><a href="mailto:yanyan.zhang@unimore.it">yanyan.zhang@unimore.it</a></strong><br>
-      Deadline for submission: August 25, 2025, 11:45 PM (Rome time)
+      Deadline for interview participation: August 25, 2025, 11:45 PM (Rome time)
     </div>
   </footer>
 
   <script>
     const contentMap = {
       zh: {
-        form: `<p class="form-text">感谢您参与本研究！请点击下方按钮填写问卷：</p><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">进入问卷</a>`,
+        form: `<div class="form-text">感谢您参与本研究！</div><div class="form-text">请点击下方按钮参与采访：</div><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">进入问卷</a>`,
         projectTitle: "项目简介",
         researcherTitle: "项目负责人",
         project: `《费兰特在中国：姐妹情谊的书写、传递与重塑》是一项关于意大利作家埃莱娜·费兰特（Elena Ferrante）小说在中国的译介、接受与影响的学术研究。本采访是该研究的重要组成部分，聚焦中国读者的阅读经验与情感反应，探索“姐妹情谊”这一主题如何在跨文化语境中被理解、传递与重塑。`,
         researcher: `张燕燕，摩德纳与雷焦艾米利亚大学语言与文化系博士生。研究兴趣有意大利当代文学、文学批评、翻译研究、海洋文学。合译有《一个不属于我的名字》《成年人的谎言生活》《寻找伊莎贝尔》《最后的灯塔》等。`
       },
       it: {
-        form: `<p class="form-text">Grazie per aver partecipato alla nostra ricerca! Clicca il bottone qui sotto per compilare il questionario:</p><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">Vai al questionario</a>`,
+        form: `<div class="form-text">Grazie per aver partecipato alla nostra ricerca!</div><div class="form-text">Clicca il bottone qui sotto per partecipare all’intervista:</div><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">Vai al questionario</a>`,
         projectTitle: "Descrizione del progetto",
         researcherTitle: "Ricercatrice",
         project: `<em>Ferrante in Cina: scrittura, trasmissione e rielaborazione della sorellanza</em> è una ricerca accademica sull'introduzione, la ricezione e l'impatto dei romanzi ferrantiani in Cina. Il progetto si concentra sull'esperienza di lettura delle lettrici e dei lettori cinesi e su come il tema della sorellanza venga recepito e trasformato in un contesto interculturale.`,
         researcher: `Zhang Yanyan, dottoranda in Scienze Umanistiche presso il Dipartimento di Studi Linguistici e Culturali dell’Università di Modena e Reggio Emilia. I suoi interessi di ricerca comprendono letteratura italiana contemporanea, critica letteraria, studi della traduzione letteraria e la letteratura di mare. Opere tradotte: <em>Un nome che non è il mio</em>, <em>La vita bugiarda degli adulti</em>, <em>Per Isabel. Un mandala</em>, <em>L'ultimo faro</em>.`
       },
       en: {
-        form: `<p class="form-text">Thank you for participating in our research! Please click the button below to fill out the questionnaire:</p><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">Go to the questionnaire</a>`,
+        form: `<div class="form-text">Thank you for participating in our research!</div><div class="form-text">Please click the button below to participate in the interview:</div><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">Go to the questionnaire</a>`,
         projectTitle: "Project Overview",
         researcherTitle: "Researcher",
         project: `<em>Ferrante in China: Writing, Transmission, and Reinterpretation of Sisterhood</em> is an academic study on the translation, reception, and cultural reinterpretation of Ferrante’s novels in China. The project focuses on Chinese readers’ experiences and how the theme of sisterhood is understood and reimagined across cultures.`,
