--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     }
     @media (max-width: 600px) {
       header {
-        background-position: 70% 50%; /* 手机端：右移 + 上移背景图 */
+        background-position: 75% 50%; /* 右移并减少底部 */
       }
     }
     header h1 {
       font-size: 2em;
       margin: 0;
       line-height: 1.4em;
-      color: #f5f5f5; /* 柔和白色标题 */
+      color: #f4f4f4; /* 柔和白色 */
       font-weight: bold;
       text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
     }
@@ -51,7 +51,7 @@
       font-weight: bold;
       color: #1F4E79;
       margin-top: 4em;
-      line-height: 1.8;
+      line-height: 1.4; /* 恢复正常行距 */
     }
     .form-button {
       display: inline-block;
@@ -62,7 +62,7 @@
       border: none;
       border-radius: 30px;
       text-decoration: none;
-      margin: 1.5em 0 3em;
+      margin: 2em 0 3em;
       transition: background-color 0.3s, transform 0.3s;
     }
     .form-button:hover {
@@ -118,32 +118,32 @@
     </div>
     <div id="footer-it" style="display:none">
       Email di contatto: <strong><a href="mailto:yanyan.zhang@unimore.it">yanyan.zhang@unimore.it</a></strong><br>
-      Scadenza dell’intervista: 25 agosto 2025, ore 23:45 (ora di Roma)
+      Termine per partecipare: 25 agosto 2025, ore 23:45 (ora di Roma)
     </div>
     <div id="footer-en" style="display:none">
       Contact email: <strong><a href="mailto:yanyan.zhang@unimore.it">yanyan.zhang@unimore.it</a></strong><br>
-      Deadline for interview participation: August 25, 2025, 11:45 PM (Rome time)
+      Interview deadline: August 25, 2025, 11:45 PM (Rome time)
     </div>
   </footer>
 
   <script>
     const contentMap = {
       zh: {
-        form: `<div class="form-text">感谢您参与本研究！</div><div class="form-text">请点击下方按钮参与采访：</div><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">进入问卷</a>`,
+        form: `<div class="form-text">感谢您参与本研究！<br>请点击下方按钮参与采访：</div><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">进入问卷</a>`,
         projectTitle: "项目简介",
         researcherTitle: "项目负责人",
         project: `《费兰特在中国：姐妹情谊的书写、传递与重塑》是一项关于意大利作家埃莱娜·费兰特（Elena Ferrante）小说在中国的译介、接受与影响的学术研究。本采访是该研究的重要组成部分，聚焦中国读者的阅读经验与情感反应，探索“姐妹情谊”这一主题如何在跨文化语境中被理解、传递与重塑。`,
         researcher: `张燕燕，摩德纳与雷焦艾米利亚大学语言与文化系博士生。研究兴趣有意大利当代文学、文学批评、翻译研究、海洋文学。合译有《一个不属于我的名字》《成年人的谎言生活》《寻找伊莎贝尔》《最后的灯塔》等。`
       },
       it: {
-        form: `<div class="form-text">Grazie per aver partecipato alla nostra ricerca!</div><div class="form-text">Clicca il bottone qui sotto per partecipare all’intervista:</div><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">Vai al questionario</a>`,
+        form: `<div class="form-text">Grazie per aver partecipato alla nostra ricerca!<br>Clicca il bottone qui sotto per partecipare all’intervista:</div><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">Vai al questionario</a>`,
         projectTitle: "Descrizione del progetto",
         researcherTitle: "Ricercatrice",
         project: `<em>Ferrante in Cina: scrittura, trasmissione e rielaborazione della sorellanza</em> è una ricerca accademica sull'introduzione, la ricezione e l'impatto dei romanzi ferrantiani in Cina. Il progetto si concentra sull'esperienza di lettura delle lettrici e dei lettori cinesi e su come il tema della sorellanza venga recepito e trasformato in un contesto interculturale.`,
         researcher: `Zhang Yanyan, dottoranda in Scienze Umanistiche presso il Dipartimento di Studi Linguistici e Culturali dell’Università di Modena e Reggio Emilia. I suoi interessi di ricerca comprendono letteratura italiana contemporanea, critica letteraria, studi della traduzione letteraria e la letteratura di mare. Opere tradotte: <em>Un nome che non è il mio</em>, <em>La vita bugiarda degli adulti</em>, <em>Per Isabel. Un mandala</em>, <em>L'ultimo faro</em>.`
       },
       en: {
-        form: `<div class="form-text">Thank you for participating in our research!</div><div class="form-text">Please click the button below to participate in the interview:</div><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">Go to the questionnaire</a>`,
+        form: `<div class="form-text">Thank you for participating in our research!<br>Please click the button below to join the interview:</div><a class="form-button" href="https://forms.cloud.microsoft/e/U3YjYPLF1f?origin=lprLink" target="_blank">Go to the questionnaire</a>`,
         projectTitle: "Project Overview",
         researcherTitle: "Researcher",
         project: `<em>Ferrante in China: Writing, Transmission, and Reinterpretation of Sisterhood</em> is an academic study on the translation, reception, and cultural reinterpretation of Ferrante’s novels in China. The project focuses on Chinese readers’ experiences and how the theme of sisterhood is understood and reimagined across cultures.`,
